--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,28 +1,15 @@
-name: GitHub Actions
-
-on: 
-  push:
+name: Sample Should Fail All Runs
+on: push
 jobs:
-  Explore-GitHub-Actions:
+  job:
     runs-on: ubuntu-latest
+    strategy:
+      matrix: 
+        run: ['run1', 'run2']
     steps:
-      - name: var
-        env:
-          prefixesForBuilds: 
-            -"core-services"
-            -"events-api"
-            -"http-api"
-            -"auth-api/"
-            -"model/"
-            -"ui/src"
-          suffixesForBuilds:
-            -"build.sbt"
-            -".p12"
-            -"package.json"
-      - name: files
-        if: github.event.pull_request.merged == true
-        uses: jitterbit/get-changed-files@v1
-          for file in ${{ steps.files.outputs.all }}; do
-            echo "Do something with this ${changed_file}."
-            echo file.path
-          done
+    - run: echo Run ${{ matrix.run }} 
+    - run: date
+    - name: Exit early if matrix run is run1
+      run: '[ "${{ matrix.run }}" = "run1" ] && exit 1 || echo "continue"'
+    - run: sleep 5 # Sleep to make sure all process that don't match above check don't finish before the one that will exit
+    - run: date
