--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,13 +3,10 @@ on: push
 jobs:
   job:
     runs-on: ubuntu-latest
-    strategy:
-      matrix: 
-        run: ['run1', 'run2']
-    steps:
-    - run: echo Run ${{ matrix.run }} 
-    - run: date
-    - name: Exit early if matrix run is run1
-      run: '[ "${{ matrix.run }}" = "run1" ] && exit 1 || echo "continue"'
-    - run: sleep 5 # Sleep to make sure all process that don't match above check don't finish before the one that will exit
-    - run: date
+    steps :
+      - name: files
+        uses: jitterbit/get-changed-files@v1
+      - run: |
+          for changed_file in ${{ steps.files.outputs.all }}; do
+            echo "Do something with this ${changed_file}."
+          done
