--- a/.github/workflows/listfiles.yaml
+++ b/.github/workflows/listfiles.yaml
@@ -16,13 +16,6 @@ jobs:
         run: |
           echo "All:"
           echo "${{ steps.abc.outputs.all }}"
-          echo "Added:"
-          echo "${{ steps.abc.outputs.added }}"
-          echo "Removed:"
-          echo "${{ steps.abc.outputs.removed }}"
-          echo "Renamed:"
-          echo "${{ steps.abc.outputs.renamed }}"
-          echo "Modified:"
-          echo "${{ steps.abc.outputs.modified }}"
-          echo "Added+Modified:"
-          echo "${{ steps.abc.outputs.added_modified }}"
+          if: startsWith("${{ steps.abc.outputs.all }}, 'ui/src')
+            ACCESSIBILITY_REQUIRED = true
+          echo ${{ACCESSIBILITY_REQUIRED}}
