--- a/.github/workflows/listfiles.yaml
+++ b/.github/workflows/listfiles.yaml
@@ -8,14 +8,14 @@ jobs:
     steps:
       - uses: actions/checkout@v2.1.0
       - uses: jitterbit/get-changed-files@v1
-        id: abc
+        id: changes
         with:
           format: space-delimited
           token: ${{ secrets.GITHUB_TOKEN }}
       - name: Printing
         run: |
           echo "All:"
-          echo "${{ steps.abc.outputs.all }}"
-          if: startsWith("${{ steps.abc.outputs.all }}, 'ui/src')
+          echo "${{ steps.changes.outputs.all }}"
+          if: startsWith("${{ steps.changes.outputs.all }}, 'github')
             ACCESSIBILITY_REQUIRED = true
           echo ${{ACCESSIBILITY_REQUIRED}}
