--- a/.github/workflows/listfiles.yaml
+++ b/.github/workflows/listfiles.yaml
@@ -16,7 +16,7 @@ jobs:
         run: |
           echo "All:"
           echo "${{ steps.changes.outputs.all }}"
-          if: startsWith("${{ steps.changes.outputs.all }}, 'github')
+          if: startsWith("${{ steps.changes.outputs.all }}, 'github1')
             env:
               accessibility_required = true
           echo ${{accessibility_required}}
