--- a/.github/workflows/listfiles.yaml
+++ b/.github/workflows/listfiles.yaml
@@ -18,5 +18,5 @@ jobs:
           echo "${{ steps.changes.outputs.all }}"
           if: startsWith("${{ steps.changes.outputs.all }}, 'github1')
             env:
-              accessibility_required = true
-          echo ${{accessibility_required}}
+              a = true
+          echo ${{env.a}}
